objects/npe01__Contacts_And_Orgs_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Application settings for the Contacts and Organizations package of the Nonprofit Starter Pack</description>
    <fields>
        <fullName>npe01__Account_Processor__c</fullName>
        <defaultValue>&quot;Household Account&quot;</defaultValue>
        <description>Setting for the Account model. Should be &quot;Household Account&quot;, &quot;One-to-One&quot;, or &quot;Individual&quot;. Replaces the custom field Contact.SystemAccountProcessor__c.  &quot;Household Account&quot; is the recommended model.</description>
        <inlineHelpText>Setting for the Account model. Should be &quot;One-to-one&quot; or &quot;Individual&quot;. Replaces the custom field Contact.SystemAccountProcessor__c</inlineHelpText>
        <label>Account Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__DISABLE_IndividualAccounts_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>!!WARNING!!
DISABLES the IndividualAccounts.trigger (Contact, before i/u, after i/u/d)
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DEPRECATED-Disable_IndividualAcc_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__DISABLE_OpportunityAccount_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>!!WARNING!!
DISABLES the OpportunityAccount.trigger (Opportunity, before insert)
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DEPRECATED-Disable_OppAccount_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__DISABLE_OpportunityContactRoles_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>!!WARNING!!
DISABLES the OpportunityContactRoles.trigger (Opportunity, after insert)
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DEPRECATED-Disable_OCR_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__DISABLE_OpportunityPayments_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>!!WARNING!!
DISABLES the OpportunityPayments.trigger (Opportunity, after insert, after update)
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DEPRECATED-Disable_OppPayments_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Default_Opp_on_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether to create an Opportunity during Lead conversion.</description>
        <label>Create Opportunity on Lead Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Disable_Account_Model_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>Check this to turn off the Account Model trigger. Accounts will no longer be automatically created for Contacts. Only use this if you understand the ramifications. Turning off the account model could get your data into an inconsistent state.</inlineHelpText>
        <label>DEPRECATED-Disable Account Model Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Enable_Opportunity_Contact_Role_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>Check this to turn on the automatic creation of Opportunity Contact Roles for newly created Opportunities in the One-to-One model.</inlineHelpText>
        <label>DEPRECATED-Enable OppContactRole Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Enable_Update_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  New versions of the Nonprofit Starter Pack will be automatically installed.</description>
        <inlineHelpText>Controls if the package automatically checks for new updates and versions.</inlineHelpText>
        <label>DEPRECATED-Enable Update Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__HH_Account_RecordTypeID__c</fullName>
        <description>The ID of the Account Record Type to be used for Household Accounts. If none is selected, the Account will default to the user&apos;s default Account Record Type.</description>
        <inlineHelpText>The ID of the Account Record Type to be used for Household Accounts. If none is selected, the Account will default to the user&apos;s default Account Record Type.</inlineHelpText>
        <label>Household Account Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Has_Package_Update__c</fullName>
        <description>DEPRECATED.  New versions of the Nonprofit Starter Pack will be automatically installed.</description>
        <label>DEPRECATED-Has Package Update</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Last_Update_Check__c</fullName>
        <description>DEPRECATED.  New versions of the Nonprofit Starter Pack will be automatically installed.</description>
        <inlineHelpText>The date/time of the last callout to check for new versions of the NPSP packages.</inlineHelpText>
        <label>DEPRECATED-Last Update Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npe01__Max_Package_Version__c</fullName>
        <description>DEPRECATED.  New versions of the Nonprofit Starter Pack will be automatically installed.</description>
        <label>DEPRECATED-Max Package Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__One_to_One_RecordTypeID__c</fullName>
        <description>The ID of the Account Record Type to be used for One-to-One Accounts.  If none is selected, the Account will default to the user&apos;s default Account Record Type.</description>
        <inlineHelpText>The ID of the record type to be used for 1x1 accounts. If none is selected, the account will default to the user&apos;s default account selection.</inlineHelpText>
        <label>One-to-One Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Opportunity_Contact_Role_Default_role__c</fullName>
        <description>The default role for the primary Opportunity Contact Role that gets automatically created.</description>
        <inlineHelpText>Default role for the primary Opportunity Contact Role</inlineHelpText>
        <label>Opportunity Contact Role Default Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Package_Update_URL__c</fullName>
        <description>DEPRECATED.  New versions of the Nonprofit Starter Pack will be automatically installed.</description>
        <label>DEPRECATED-Package Update URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>npe01__Payments_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables automatic Payments created for new Opportunities/Donations.</description>
        <inlineHelpText>Enables automatic payments for new Opportunities/Donations.</inlineHelpText>
        <label>Payments Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Update_Check_Interval__c</fullName>
        <defaultValue>90</defaultValue>
        <description>DEPRECATED.  New versions of the Nonprofit Starter Pack will be automatically installed.</description>
        <inlineHelpText>The number of days between NPSP callouts to check for new versions of this package. The default value is 90 days.</inlineHelpText>
        <label>DEPRECATED-Update Check Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contacts And Orgs Settings</label>
</CustomObject>